[tool.poetry]
name = "backprop-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL2"

[tool.poetry.dependencies]
python = ">3.8"
numpy = "^1.20.3"
holoviews = "^1.14.3"
jupyter = "^1.0.0"
jupyter_nbextensions_configurator = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
