[tool.poetry]
name = "backprop-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL2"

[tool.poetry.dependencies]
python = ">3.8"
numpy = "^1.20.3"
holoviews = "^1.14.3"
matplotlib = "^3.4.2"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
jupyterlab-vim = "^0.14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
